name:                cabal-dev-doc
version:             0.1.0.0
synopsis:            Generate a haddock documentation index for your cabal-dev project's dependencies
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Sinclair
maintainer:          ben.d.sinclair@gmail.com
copyright:           Ben Sinclair, 2013
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable cabal-dev-doc
  main-is: Main.hs
  -- other-modules:
  build-depends:
      base      == 4.6.*
    , Cabal     == 1.18.*
    , directory == 1.2.*
    , filepath  == 1.3.*
    , transformers >= 0.3
